2002-10-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: add tclIndex to install

	* library/mk4vfs.tcl:
	* library/starkit.tcl:
	* library/vfsUtils.tcl:
	* library/vfslib.tcl:
	* library/webdavvfs.tcl: whitespace cleanup

	* library/pkgIndex.tcl: remove 8.4 alpha checks, use vfs::dll var
	to store library name.

2002-10-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* tclconfig/tcl.m4:
	* configure:
	* configure.in: move the CFLAGS definition into TEA_ENABLE_SHARED
	and make it pick up the env CFLAGS at configure time.

2002-09-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in:               replace the ancient build system
	* README.cygwin:             with TEA 2002 build spec.
	* aclocal.m4:
	* config.guess (removed):
	* config.sub (removed):
	* configure:
	* configure.in:
	* install-sh (removed):
	* mkIndex.tcl.in (removed):
	* mkinstalldirs (removed):
	* tcl.m4 (removed):
	* tclconfig/README.txt (new):
	* tclconfig/install-sh (new):
	* tclconfig/tcl.m4 (new):
	* generic/vfs.c: changed BUILD_Vfs to BUILD_vfs

2002-07-18  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: ensure all mount activity is with fully
	normalized paths in which the last path element is not a link.
	Solves (together with latest cvs head changes) a problem in
	starting up a tclkit(sh) from a link.
	
2002-07-08  Vince Darley <vincentdarley@sourceforge.net>
	* generic/vfs.c: update for latest cvs head.
	* win/makefile.vc: compilation into Release and Debug
	directories as appropriate.
	
2002-06-22  Jean-Claude Wippler <jcw@equi4.com>
	* mac/pkgIndex_mac.tcl:
	* library/pkgIndex.tcl:
	* library/mk4vfs.in: fix recursive file deletion, bump to 1.5

2002-05-29  Jean-Claude Wippler <jcw@equi4.com>
	* Makefile.in: moved the definition of $(OBJEXT) up so the
	definition of vfs_OBJECTS works with more make's

2002-05-13  Vince Darley <vincentdarley@sourceforge.net>
	* library/webdavvfs.tcl: v. early implementation of a webdav