@@ -38,6 +38,6 @@ proc loadvfs {dll} {
 
 package ifneeded vfs 1.0 [list loadvfs $dll]
 
-package ifneeded mk4vfs 1.5 [list source [file join $dir mk4vfs.tcl]]
+package ifneeded mk4vfs 1.6 [list source [file join $dir mk4vfs.tcl]]
 package ifneeded starkit 1.0 [list source [file join $dir starkit.tcl]]
 package ifneeded vfslib 1.3 [list source [file join $dir vfslib.tcl]]
